edit base.html and count.js

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,8 +17,13 @@
         <p>秒</p>
     </div>
     <div class='main'>
-        <p>来客件数: </p>
-        <p id='display_count'></p>
+        <p>視聴回数: </p>
+        <p id='display_face_count'></p>
+        <p>回</p>
+    </div>
+    <div class='main'>
+        <p>注視回数: </p>
+        <p id='display_eye_count'></p>
         <p>回</p>
     </div>
     <div class="main">
