edit edit.html and count.js

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,13 +17,18 @@
         <p>秒</p>
     </div>
     <div class='main'>
-        <p>視聴回数: </p>
+        <p>総視聴回数: </p>
         <p id='display_face_count'></p>
         <p>回</p>
     </div>
     <div class='main'>
         <p>注視回数: </p>
         <p id='display_eye_count'></p>
+        <p>回</p>
+    </div>
+    <div class="main">
+        <p>一目見た回数: </p>
+        <p id='display_face_only_count'></p>
         <p>回</p>
     </div>
     <div class="main">
