リダイレクトを設定,

--- a/templates/base.html
+++ b/templates/base.html
@@ -39,8 +39,7 @@
     <div class="main">
         <a 
           class="btn btn-green" 
-          href='http://127.0.0.1:8000/face_count/count/' 
-          target="_blank"
+          href='/face_count/start_count/' 
         >
         カウント開始
         </a>
