カウントの開始と停止を実装しました

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
     <div class="main">
         <a 
           class="btn btn-green" 
-          href='/face_count/start_count/' 
+          id="count_start_btn"
         >
         カウント開始
         </a>
@@ -50,7 +50,7 @@
         </a>
         <a
           class="btn btn-orange"
-          href='/face_count/stop_count/'
+          id="count_stop_btn"
         >
         カウント終了
         </a>
