--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
 <header class="headgamen">Face Analisis</header>
 <body>
     <div class="main">
+        <img src="{% static 'japan.png' %}" id="image">
         <div>
             <p>計測開始日時: </p>
             <p id='display_start_date'></p>
@@ -55,7 +56,9 @@
         カウント終了
         </a>
     </div>    
-
+    <video id="player" controls autoplay></video>
+    <button id="capture">Capture</button>
+    <canvas id="snapshot" width=1280 height=720></canvas>
     <script src="{% static 'count.js' %}"></script>
 </body>
 </html>
