リクエストのパスを変えた、setting.pyのallowedHostにローカルホストを加えた

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 <header class="headgamen">Face Analisis</header>
 <body>
     <div class="main">
-        <img src='{% static 'sample.png' %}' alt='' id='image'>
+        <img src="{% static 'face_count/sample.png' %}" id='image'>
         <div>
             <p>計測開始日時: </p>
             <p id='display_start_date'></p>
