アイコンをつけた

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Face Analysis</title>
+    <link rel="icon" href="{% static 'face_count/favicon.ico' %}">
     <link rel='stylesheet' href="{% static 'face_count/style.css' %}">
 </head>
 <header class="headgamen">Face Analisis</header>
