--- a/templates/base.html
+++ b/templates/base.html
@@ -59,6 +59,7 @@
     </div>    
     <!-- <video id="player" controls autoplay></video> -->
     <canvas id="snapshot" width=1280 height=720></canvas>
+    {% csrf_token %}
     <script src="{% static 'face_count/count.js' %}"></script>
 </body>
 </html>
