--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 <header class="headgamen">Face Analisis</header>
 <body>
     <div class="main">
-        <img src="{% static 'face_count/sample.png' %}" id='image'>
+        <!-- <img src="{% static 'face_count/sample.png' %}" id='image'> -->
         <div>
             <p>計測開始日時: </p>
             <p id='display_start_date'></p>
@@ -57,7 +57,7 @@
         カウント終了
         </a>
     </div>    
-    <!-- <video id="player" controls autoplay></video> -->
+    <video id="player" controls autoplay></video>
     <canvas id="snapshot" width=1280 height=720></canvas>
     {% csrf_token %}
     <script src="{% static 'face_count/count.js' %}"></script>
