カウントの停止とカウントの再開機能を追加した

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,16 +43,28 @@
         >
         カウント開始
         </a>
-        <a 
+        <!-- <a 
           class="btn btn-blue" 
           href='http://127.0.0.1:8000/face_count/face_auth/' 
           target="_blank"
         >
         カメラ起動
-        </a>
+        </a> -->
         <a
           class="btn btn-orange"
           id="count_stop_btn"
+        >
+        カウント停止
+        </a>
+        <a
+          class="btn btn-green"
+          id="count_restart_btn"
+        >
+        カウント再開
+        </a>
+        <a
+          class="btn btn-orange"
+          id="count_terminate_btn"
         >
         カウント終了
         </a>
