--- a/templates/base.html
+++ b/templates/base.html
@@ -8,64 +8,93 @@
     <title>Face Analysis</title>
     <link rel="icon" href="{% static 'face_count/favicon.ico' %}">
     <link rel='stylesheet' href="{% static 'face_count/style.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
-<header class="headgamen">Face Analisis</header>
+<header class="header">Face Analysis</header>
 
 <body>
-    <div class="main">
-        <!-- <img src="{% static 'face_count/sample.png' %}" id='image'> -->
-        <div>
-            <p>計測開始日時: </p>
-            <p id='display_start_date'></p>
+    
+    <div class='row main-row'>
+        <div class='col l9 main-col center'>
+            <p>カメラプレビュー</p>
+            <hr>
+            <video class="center-align center" id="player" width=960 height=540 controls autoplay></video>
         </div>
-        <div>
-            <p>計測開始時刻: </p>
-            <p id='display_start_time'></p>
+        <div class='col l3 main-col row'>
+            <p class="center">分析結果</p>
+            <hr>
+            <div class="result-container col offset-l3">
+                <div>
+                    <p>計測開始日時 : </p>
+                    <p id='display_start_date'></p>
+                </div>
+                <div>
+                    <p>計測開始時刻 : </p>
+                    <p id='display_start_time'></p>
+                </div>
+                <div>
+                    <p>総視聴回数 : </p>
+                    <p id='display_face_count'></p>
+                    <p>回</p>
+                </div>
+                <div>
+                    <p>総注視回数 : </p>
+                    <p id='display_eye_count'></p>
+                    <p>回</p>
+                </div>
+                <div>
+                    <p>総一瞥回数 : </p>
+                    <p id='display_face_only_count'></p>
+                    <p>回</p>
+                </div>
+            </div>
+            
+            <div class="center col s12 btn-container">
+                <div class='center'>
+                    <button class="btn" id="count_start_btn">
+                        カウント開始
+                    </button>
+                    <button class="btn red darken-3" id="count_stop_btn">
+                        カウント停止
+                    </button>
+                </div>
+                <div class='center'>
+                    <button class="btn" id="count_restart_btn">
+                        カウント再開
+                    </button>
+                    <button class="btn red darken-3" id="count_terminate_btn">
+                        カウント終了
+                    </button>
+                </div>
+                <div>
+                    <div class='center btn-control-display-container'>
+                        <button class='btn orange darken-3' id='deactive_camera_btn'>
+                            画面停止
+                        </button>
+                        <button class='btn green darken-3' id='active_camera_btn'>
+                            画面開始
+                        </button>
+                    </div>
+                </div>
+                
+            </div>
         </div>
     </div>
-    <div class='main'>
-        <p>総視聴回数: </p>
-        <p id='display_face_count'></p>
-        <p>回</p>
+    <div class='row'>
+        <div class='col l6 center'>
+            <p class="center">スナップショット</p>
+            <hr>
+            <canvas id="snapshot_canvas" width=640 height=360></canvas>
+        </div>
+        <div class='col l6 center'>
+            <p class="center">分析後スナップショット</p>
+            <hr>
+            <canvas id='result_canvas' width=640 height=360></canvas>
+        </div>
     </div>
-    <div class='main'>
-        <p>注視回数: </p>
-        <p id='display_eye_count'></p>
-        <p>回</p>
-    </div>
-    <div class="main">
-        <p>一目見た回数: </p>
-        <p id='display_face_only_count'></p>
-        <p>回</p>
-    </div>
-    <div class="main">
-        <button class="btn btn-green" id="count_start_btn">
-            カウント開始
-        </button>
-        <!-- <button class="btn btn-blue" href='http://127.0.0.1:8000/face_count/face_auth/' target="_blank">
-            カメラ起動
-        </button> -->
-        <button class="btn btn-orange" id="count_stop_btn">
-            カウント停止
-        </button>
-        <button class="btn btn-green" id="count_restart_btn">
-            カウント再開
-        </button>
-        <button class="btn btn-orange" id="count_terminate_btn">
-            カウント終了
-        </button>
-    </div>
-    <div class='main'>
-        <button class='btn btn-blue' id='deactive_camera_btn'>
-            画面停止
-        </button>
-        <button class='btn btn-blue' id='active_camera_btn'>
-            画面開始
-        </button>
-    </div>
-    <video id="player" width=1280 height=720 controls autoplay></video>
-    <canvas id="snapshot_canvas" width=640 height=360></canvas>
-    <canvas id='result_canvas' width=640 height=360></canvas>
+    
+    
+    
     {% csrf_token %}
     <script src="{% static 'face_count/count.js' %}"></script>
 </body>
