--- a/face_count/static/face_count/style.css
+++ b/face_count/static/face_count/style.css
@@ -74,7 +74,7 @@
 
 .number-icon{
     position: absolute;
-    top: 5px;
+    bottom: 5px;
     left: 5px;
     line-height: 50px;
     font-size: 20px;
@@ -85,9 +85,9 @@
 }
 
 .col .card .card-image .card-title{
-    bottom: auto;
-    top: 5px;
+    bottom: 5px;
     left: 10px;
+    padding-bottom: 0px;
     padding-top: 0px;;
     padding-left: 50px;
     line-height: 40px;
