--- a/templates/face_count/base.html
+++ b/templates/face_count/base.html
@@ -25,5 +25,60 @@
     {% block content %}
     {% endblock %}
 </body>
-
+        <footer class="page-footer teal darken-2">
+            <div class="container">
+                <div class="row">
+                    <div class="col l6 s12">
+                        <h5 class="white-text">本サイトについて</h5>
+                        <p class="grey-text text-lighten-4">
+                            本サイトは顔検知による看板広告の効果測定アプリのプロトタイプです。ハッカソンにて製作したものを改良してWebアプリにしました。<br>
+                            本サイトへのご意見などございましたら以下のコメントページにてよろしくお願いいたします。
+                        </p>
+                    </div>
+                    <div class="col l4 offset-l2 s12">
+                        <h5 class="white-text">使用したライブラリ</h5>
+                        <ul>
+                            <li>
+                                <a 
+                                  class="grey-text text-lighten-3" 
+                                  href="https://www.djangoproject.com/" 
+                                  target="_blank" 
+                                  rel="noopener noreferrer"
+                                >Django(2.1.1)</a>
+                            </li>
+                            <li>
+                                <a 
+                                  class="grey-text text-lighten-3" 
+                                  href="https://opencv.org/" 
+                                  target="_blank" 
+                                  rel="noopener noreferrer"
+                                >OpenCV(4.1.1)</a>
+                            </li>
+                            <li>
+                                <a 
+                                  class="grey-text text-lighten-3" 
+                                  href="https://pillow.readthedocs.io/en/stable/#" 
+                                  target="_blank" 
+                                  rel="noopener noreferrer"
+                                >Pillow(7.0.0)</a>
+                            </li>
+                            <li>
+                                <a 
+                                  class="grey-text text-lighten-3" 
+                                  href="https://materializecss.com/" 
+                                  target="_blank" 
+                                  rel="noopener noreferrer"
+                                >Materialize(1.0.0)</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-copyright teal darken-3">
+                <div class="container">
+                    ©️ 2020 Rei Sugiura
+                    <a class="grey-text text-lighten-4 right" href="https://github.com/reibomaru" target="_blank" rel="noopener noreferrer">githubアカウント</a>
+                </div>
+            </div>
+        </footer>
 </html>
