--- a/templates/face_count/base.html
+++ b/templates/face_count/base.html
@@ -76,15 +76,15 @@
                 </div>
             </div>
             <div class="footer-copyright teal darken-3">
-                <div class="container">
-                    <p>©️ 2020 Rei Sugiura</p>
-                    <a id="comment_modal_btn">コメントを送る</a>
+                <div class="container center">
+                    <p class="footer-text">©️ 2020 Rei Sugiura</p>
+                    <a class="footer-text grey-text text-lighten-4 btn" id="comment_modal_btn">コメントを送る</a>
                     <a 
-                      class="grey-text text-lighten-4" 
+                      class="footer-text grey-text text-lighten-4" 
                       href="https://github.com/reibomaru" 
                       target="_blank" 
                       rel="noopener noreferrer"
-                    >githubアカウント</a>
+                    >Githubアカウント</a>
                 </div>
             </div>
             <div id="comment_modal" class="comment-modal">
