404ページを追加した

--- a/templates/face_count/base.html
+++ b/templates/face_count/base.html
@@ -7,7 +7,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Face Analysis</title>
     <link rel="icon" href="{% static 'face_count/favicon.ico' %}">
-    <link rel='stylesheet' href="{% static 'face_count/style.css' %}">
+    <link rel="stylesheet" href="{% static 'face_count/style.css' %}">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
@@ -110,5 +110,5 @@
                 </div>
             </div>
         </footer>
-        <script src="{% static 'face_count/base.js' %}"></script>
+        <script type='text/javascript' src="{% static 'face_count/base.js' %}"></script>
 </html>
