--- a/face_count/static/face_count/style.css
+++ b/face_count/static/face_count/style.css
@@ -4,6 +4,10 @@
     text-align: center;
 }
 
+.page-footer{
+    margin-top: 100px;
+}
+
 .footer-copyright p{
     display: inline;
 }
@@ -163,4 +167,8 @@
 
 .usage-container .card{
     margin:30px 0px 0px;
+}
+
+.page-not-found-container{
+    margin: 100px 10%;
 }
