レスポンシブデザインを適用した()

--- a/templates/face_count/base.html
+++ b/templates/face_count/base.html
@@ -15,10 +15,10 @@
 <body>
     <div class="header teal darken-1">
         <div class='row'>
-            <div class='col s2'>
+            <div class='col s3 m2'>
                 <a class="header-anker" href="/usage/">使い方</a>
             </div>
-            <div class="col offset-s2 s4">
+            <div class="col offset-s1 s4 offset-m2 m4">
                 <a class="header-anker" href="/">Face Analysis</a>
             </div>
         </div>
