--- a/face_count/static/face_count/style.css
+++ b/face_count/static/face_count/style.css
@@ -1,5 +1,9 @@
+html{
+    font-size: 16px;
+}
+
 .header{
-    font-size: 18px;
+    font-size: 1.125rem;
     color: white;
     text-align: center;
 }
@@ -13,7 +17,7 @@
 }
 
 .footer-text{
-    margin: 0px 100px;
+    margin: 0px 5%;
 }
 
 .comment-modal-body .container{
@@ -88,11 +92,19 @@
 }
 
 .result-container{
-    margin-top: 80px;
+    margin-top: 10%;
+}
+
+.result-container p{
+    font-size: 0.9375rem;
 }
 
 .btn-container{
-    margin-top: 50px;
+    margin-top: 10%;
+}
+
+.btn-container button{
+    font-size: 0.625rem;
 }
 
 .btn-control-display-container{
@@ -119,10 +131,6 @@
     background-color: #03864c
 }
 
-#display{
-    font-size: 40px;
-}
-
 .maru {
     height:40px;
     width:40px;
@@ -136,7 +144,7 @@
     bottom: 5px;
     left: 5px;
     line-height: 50px;
-    font-size: 20px;
+    font-size: 1.5rem;
 }
 
 .col .card .card-image{
@@ -150,6 +158,7 @@
     padding-top: 0px;;
     padding-left: 50px;
     line-height: 40px;
+    font-size: 1.5rem;
     font-weight: bold;
 }
 
@@ -161,7 +170,9 @@
     margin:10px 10%;
 }
 
+
 .usage-container h4{
+    font-size: 2rem;
     margin: 0;
 }
 
@@ -171,4 +182,28 @@
 
 .page-not-found-container{
     margin: 100px 10%;
+}
+
+.responsive-canvas{
+    max-width: 100%;
+    height: auto;
+}
+
+@media screen and (max-width: 768px){
+    html{
+        font-size: 14px !important;
+    }
+    
+}
+
+@media screen and (max-width: 425px){
+    html{
+        font-size: 12px !important;
+    }
+    .usage-container{
+        margin:10px 5%; 
+    }
+    .page-footer{
+        margin-top: 50px;
+    }
 }
