--- a/face_count/static/face_count/style.css
+++ b/face_count/static/face_count/style.css
@@ -39,14 +39,18 @@ html{
     width: 100%;
     overflow: auto;
     background-color: rgba(0,0,0,0.5);
-    }
+}
+
+.comment-modal h4{
+    font-size: 2rem;
+}
 
 .comment-modal-content{
     position: fixed;
     top: 50%;
     left: 50%;
     background-color: white;
-    width: 800px;
+    width: 70%;
     height: auto;
     transform: translate(-50%, -50%);
     -webkit-font-smoothing: none;
@@ -141,7 +145,7 @@ html{
 
 .number-icon{
     position: absolute;
-    bottom: 5px;
+    top: 5px;
     left: 5px;
     line-height: 50px;
     font-size: 1.5rem;
@@ -152,7 +156,7 @@ html{
 }
 
 .col .card .card-image .card-title{
-    bottom: 5px;
+    top: 5px;
     left: 10px;
     padding-bottom: 0px;
     padding-top: 0px;;
@@ -170,7 +174,6 @@ html{
     margin:10px 10%;
 }
 
-
 .usage-container h4{
     font-size: 2rem;
     margin: 0;
@@ -178,6 +181,10 @@ html{
 
 .usage-container .card{
     margin:30px 0px 0px;
+}
+
+.title-container{
+    height: 50px;
 }
 
 .page-not-found-container{
@@ -193,7 +200,12 @@ html{
     html{
         font-size: 14px !important;
     }
-    
+    .result-container {
+        margin-top: 0px;
+    }
+    .comment-modal-content{
+        width: 90%;
+    }
 }
 
 @media screen and (max-width: 425px){
