--- a/templates/face_count/count.html
+++ b/templates/face_count/count.html
@@ -2,12 +2,12 @@
 {% load static %}
 {% block content %}
 <div class='row main-row'>
-    <div class='col m9 main-col center'>
+    <div class='col m12 l9 main-col center'>
         <p>カメラプレビュー</p>
         <hr>
         <video class="responsive-video center-align center" id="player" width=960 height=540 controls autoplay></video>
     </div>
-    <div class='col m3 s12 main-col row'>
+    <div class='col m12 l3 s12 main-col row'>
         <p class="center">分析結果</p>
         <hr>
         <div class="result-container col offset-s3 offset-m2">
@@ -36,7 +36,7 @@
             </div>
         </div>
 
-        <div class="center col s12 btn-container">
+        <div class="center col s12 offset-m2 m4 l12 btn-container">
             <div class='center'>
                 <button class="btn" id="count_start_btn">
                     カウント開始
@@ -68,12 +68,12 @@
     </div>
 </div>
 <div class='row'>
-    <div class='col m12 l6 center'>
+    <div class='col s12 m12 l6 center'>
         <p class="center">スナップショット</p>
         <hr>
         <canvas class="responsive-canvas" id="snapshot_canvas" width=640 height=360></canvas>
     </div>
-    <div class='col m12 l6 center'>
+    <div class='col s12 m12 l6 center'>
         <p class="center">分析後スナップショット</p>
         <hr>
         <canvas class="responsive-canvas" id='result_canvas' width=640 height=360></canvas>
