--- a/templates/face_count/usage.html
+++ b/templates/face_count/usage.html
@@ -8,13 +8,15 @@
     <div class="col s12 m12 l10">
         <div class="card row">
             <div class="card-image col m8 l8">
+                <div class="title-container">
+                    <span class="number-icon">
+                        <div class="pulse maru teal darken-1 white-text">{{ usage_elem.list_id }}</div>
+                    </span>
+                    <span class="card-title teal-text darken-1-text">{{ usage_elem.list_title }}</span>
+                </div>
                 <img src="{{ MEDIA_URL }}{{ usage_elem.list_img }}">
-                <span class="number-icon">
-                    <div class="pulse maru teal darken-1 white-text">{{ usage_elem.list_id }}</div>
-                </span>
-                <span class="card-title teal-text darken-1-text">{{ usage_elem.list_title }}</span>
             </div>
-            <div class='col m4 l4'>
+            <div class='col s12 m4 l4'>
                 <div class="card-content">
                     <p>{{ usage_elem.list_content }}</p>
                 </div>
