--- a/templates/404.html
+++ b/templates/404.html
@@ -2,21 +2,21 @@
 {% load static %}
 {% block content %}
 <div class='page-not-found-container'>
-    <div class="row valign-wrapper">
-        <div class='col l6'>
+    <div class="row">
+        <div class='col s12 m6 l6'>
             <h4>ページが見つかりませんでした</h4>
             <p>
                 申し訳ございません、お探しのページが見つかりませんでした。<br>
-                ページは削除されたか、もしくは移動された可能性がございます。
+                ページは削除されたか、もしくは移動された可能性がございます。URLをお確かめの上、再度アクセスしてください。
             </p>
         </div>
-        <div class='col l6'>
+        <div class='col s12 m6 l6'>
             <img class="responsive-img" src="{% static 'face_count/image/404.png' %}">
         </div>
     </div>
     <div class="row">
-        <a class="teal-text darken-3-text col" href='/'>Face Analysisはこちら</a><br>
-        <a class="teal-text darken-3-text col" href='/usage/'>Face Analysisの使い方はこちら</a>
+        <a class="col s6 m12 teal-text darken-3-text nav-anker" href='/'>Face Analysis</a>
+        <a class="col s6 m12 teal-text darken-3-text nav-anker" href='/usage/'>Face Analysisの使い方</a>
     </div>
 </div>
 {% endblock %}
