--- a/templates/face_count/base.html
+++ b/templates/face_count/base.html
@@ -76,9 +76,9 @@
                 </div>
             </div>
             <div class="footer-copyright teal darken-3">
-                <div class="container center">
-                    <p class="footer-text">©️ 2020 Rei Sugiura</p>
-                    <a class="footer-text grey-text text-lighten-4 btn" id="comment_modal_btn">コメントを送る</a>
+                <div class="row container center">
+                    <p class="copyright-text footer-text">©️ 2020 Rei Sugiura</p>
+                    <a class="comment-btn footer-text grey-text text-lighten-4 btn" id="comment_modal_btn">コメントを送る</a>
                     <a 
                       class="footer-text grey-text text-lighten-4" 
                       href="https://github.com/reibomaru" 
